<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_bgline"
    tools:context="com.progmatik.zkhphone.MainActivity">

        <LinearLayout
            android:id="@+id/background"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_background">
                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:gravity="bottom"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">
                        <TextView
                            tools:ignore="MissingConstraints"
                            android:id="@+id/zkhphone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_black"
                            android:text="@string/app_name"
                            android:gravity="center_horizontal|bottom"
                            android:textSize="32sp"/>
                </RelativeLayout>
                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:gravity="bottom"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:paddingLeft="32dp"
                            android:paddingRight="32dp"
                            app:srcCompat="@drawable/ic_logo"/>
                </RelativeLayout>
                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="86dp"
                    android:gravity="center_horizontal"
                    android:layout_weight="1">
                        <ProgressBar style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/loading_indicator"
                        android:visibility="invisible"
                        android:progressDrawable="@drawable/circular_progress_bar"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>
                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="86dp"
                    android:gravity="center_horizontal"
                    android:layout_weight="1">
                        <TextView
                            android:id="@+id/loading_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="48dp"
                            android:text="@string/label_initialization"
                            android:visibility="invisible"
                            android:layout_alignParentTop="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                        <TextView
                            android:id="@+id/copyright"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_copyright" />
                </RelativeLayout>
        </LinearLayout>
</android.support.constraint.ConstraintLayout>