<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.progmatik.zkhphone.WorkActivity">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- ВЕРХНИЙ БЛОК -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.2">
                <!-- БЛОК С АДРЕСОМ -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:background="@color/white">
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textAlignment="center"
                        android:layout_marginStart="1dp"
                        android:id="@+id/spinner_address"
                        android:textColor="@color/colorPrimaryDarker">
                    </Spinner>
                </RelativeLayout>
                <!-- /БЛОК С АДРЕСОМ -->
                <!-- БЛОК СЧЕТЧИКОВ и ОПЛАТЫ -->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="18dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/label_meters"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/label_meters"/>
                    <TextView
                        android:id="@+id/label_pay"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewEnd"
                        android:text="@string/label_pay"/>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginStart="36dp"
                        android:layout_marginEnd="36dp"
                        android:layout_height="77dp">
                        <TextView
                            android:id="@+id/label_debt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textAlignment="center"
                            android:text=""/>
                        <TextView
                            android:id="@+id/label_debt_summ"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:text=""/>
                    </LinearLayout>
                    <RelativeLayout
                        android:id="@+id/btn_meters"
                        android:layout_width="77dp"
                        android:layout_height="77dp"
                        android:background="@drawable/oval_button_shadow"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentStart="true"
                        android:text="">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:background="@mipmap/ic_meters"
                            android:contentDescription="@string/label_meters" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/btn_pay"
                        android:layout_width="77dp"
                        android:layout_height="77dp"
                        android:background="@drawable/oval_button_shadow"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentEnd="true"
                        android:text="" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:background="@mipmap/ic_pay"
                            android:contentDescription="@string/label_pay"/>
                    </RelativeLayout>
                </RelativeLayout>
                <!-- /БЛОК СЧЕТЧИКОВ и ОПЛАТЫ -->
                <!-- БЛОК ГОЛОСОВАНИЙ И ОБЪЯВЛЕНИЙ -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/label_vote_info"
                        android:layout_width="match_parent"
                        android:layout_height="77dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginLeft="36dp"
                        android:layout_marginRight="36dp"
                        android:gravity="center|center"
                        android:textSize="18sp"
                        android:text="@string/message_no_new_events"/>
                    <RelativeLayout
                        android:id="@+id/btn_votes"
                        android:layout_width="77dp"
                        android:layout_height="77dp"
                        android:background="@drawable/oval_button_shadow"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentStart="true"
                        android:text="">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:background="@mipmap/ic_votes"
                            android:contentDescription="@string/label_vote"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/btn_ads"
                        android:layout_width="77dp"
                        android:layout_height="77dp"
                        android:background="@drawable/oval_button_shadow"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentEnd="true"
                        android:text="">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:background="@mipmap/ic_horn"
                            android:contentDescription="@string/label_ads"/>
                    </RelativeLayout>
                </RelativeLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/label_votes"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/label_vote"/>
                    <TextView
                        android:id="@+id/label_ads"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewEnd"
                        android:text="@string/label_ads"/>
                </LinearLayout>
                <!-- /БЛОК ГОЛОСОВАНИЙ И ОБЪЯВЛЕНИЙ -->
            </LinearLayout>
            <!-- /ВЕРХНИЙ БЛОК -->

            <!-- БЛОК ПРОБЛЕМ -->
            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/white"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/label_report_troubles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/label_report_troubles"
                    android:layout_above="@+id/layout_troubles"
                    android:layout_centerInParent="true"
                    android:textColor="@color/blue" />
                <RelativeLayout
                    android:id="@+id/layout_troubles"
                    android:layout_width="match_parent"
                    android:layout_height="145dp"
                    android:layout_centerInParent="true">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_centerVertical="true"
                        android:background="@color/colorPrimary">

                        <TextView
                            android:id="@+id/label_my_troubles"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="8dp"
                            android:text="@string/label_my_troubles"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/label_total_troubles"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="8dp"
                            android:text="@string/label_total_troubles"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/white" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/btn_trouble"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/oval_button_white_bordered"
                        android:text="">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:background="@mipmap/ic_trouble"
                            android:contentDescription="@string/label_report_troubles" />
                    </RelativeLayout>
                </RelativeLayout>
                <TextView
                    android:id="@+id/label_mc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:layout_below="@+id/layout_troubles"
                    android:text=""/>

            </RelativeLayout>
            <!-- /БЛОК ПРОБЛЕМ -->

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
